<resources>
    <string name="app_name">ANMP_W2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="mathematics_operation">Mathematics Operation</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="level">Level</string>
</resources>